--- a/roles/metabase/defaults/main.yml
+++ b/roles/metabase/defaults/main.yml
@@ -6,5 +6,9 @@ POSTGRES_PASSWORD: "metabase"
 POSTGRES_USER: "metabase"
 POSTGRES_DB: "metabase"
 DBSIZE: "1Gi"
+APPCPU: "1"
+APPMEM: "2Gi"
+DBCPU: "1"
+DBMEM: "500Mi"
 DOMAIN: "{{ meta.DOMAIN | default('metabase.example.org') }}"
 IPWHITELIST: "0.0.0.0/0"
